--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "lexxy" %>
     <%= javascript_importmap_tags %>
   </head>
 
@@ -35,13 +36,33 @@
           <% if Current.user %>
             <div class="dropdown dropdown-end">
               <div tabindex="0" role="button" class="btn btn-ghost">
-                <%= Current.user.username %>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                <%= link_to Current.user.username, my_profile_path, class: "hover:underline", onclick: "event.stopPropagation();" %>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ml-1" onclick="event.stopPropagation();">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
                 </svg>
               </div>
               <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+                <li class="py-2">
+                  <div class="flex justify-center">
+                    <%= link_to my_profile_path do %>
+                      <% if Current.user.avatar.attached? %>
+                        <%= image_tag Current.user.avatar, class: "w-16 h-16 rounded-full object-cover hover:opacity-80 transition-opacity" %>
+                      <% else %>
+                        <div class="w-16 h-16 rounded-full bg-base-300 flex items-center justify-center text-base-content font-semibold hover:opacity-80 transition-opacity">
+                          <%= Current.user.username.first.upcase %>
+                        </div>
+                      <% end %>
+                    <% end %>
+                  </div>
+                </li>
+                <li class="pb-2">
+                  <div class="flex justify-center text-sm font-semibold">
+                    <%= link_to "@#{Current.user.username}", my_profile_path, class: "hover:underline" %>
+                  </div>
+                </li>
+                <li><hr class="my-2"></li>
                 <li><%= link_to t("layout.header.home"), root_path %></li>
+                <li><%= link_to t("layout.header.edit_profile"), edit_my_profile_path %></li>
                 <li><%= link_to t("layout.header.change_password"), edit_password_path %></li>
                 <li><%= link_to t("layout.header.change_email"), edit_identity_email_path %></li>
                 <li><%= link_to t("layout.header.two_factor_authentication"), new_two_factor_authentication_profile_totp_path %></li>
