--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <% if @user.bio.present? %>
-        <div class="lexxy-content max-w-none mt-6 p-6 bg-base-200 rounded-lg">
+        <div data-controller="syntax-highlight" class="lexxy-content max-w-none mt-6 p-6 bg-base-200 rounded-lg">
           <%= @user.bio %>
         </div>
       <% else %>
