--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -9,6 +9,9 @@
       <% if Current.user %>
         <div class="dropdown dropdown-end">
           <div tabindex="0" role="button" class="btn btn-ghost">
+            <% if Current.user.avatar.attached? %>
+              <%= image_tag Current.user.avatar, class: "w-6 h-6 rounded-full object-cover mr-2", onclick: "event.stopPropagation();" %>
+            <% end %>
             <%= link_to Current.user.username, my_profile_path, class: "hover:underline", onclick: "event.stopPropagation();" %>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ml-1" onclick="event.stopPropagation();">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
