--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,6 +1,7 @@
 <footer class="footer footer-center bg-base-200 text-base-content p-4 mt-auto">
   <div>
-    <p><%= t("layout.footer.copyright_text", year: Date.current.year, name: t("application.name"), rights: t("application.copyright")).html_safe %></p>
+    <p><%= t("layout.footer.copyright_text", year: Date.current.year, rights: t("application.copyright")).html_safe %></p>
   </div>
 </footer>
+
 
