--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,6 +1,18 @@
 <footer class="footer footer-center bg-base-200 text-base-content p-4 mt-auto">
   <div>
     <p><%= t("layout.footer.copyright_text", year: Date.current.year, rights: t("application.copyright")).html_safe %></p>
+    <% if git_revision.present? %>
+      <p class="text-sm opacity-70">
+        <%= link_to git_revision_url, target: "_blank", rel: "noopener noreferrer", class: "link link-hover" do %>
+          <%= t("layout.footer.revision") %>: <%= git_revision %>
+        <% end %>
+        <% if git_has_uncommitted_changes? %>
+          <span class="ml-2 text-warning" title="<%= t("layout.footer.uncommitted_changes_tooltip") %>">
+            <%= t("layout.footer.uncommitted_changes") %>
+          </span>
+        <% end %>
+      </p>
+    <% end %>
   </div>
 </footer>
 
